# pvl-dotview

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: license-check.yml  release.yml  test.yml
src/dotviewer/: __main__.py  renderer.py  window.py
src/pvl_dotview/: __main__.py  app.py  renderer.py  window.py
