[project]
name = "pvl-dotview"
version = "0.1.1"
description = "Interactive Graphviz DOT file viewer with pan, zoom, and multi-window support."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "GaryCoding" },
    { name = "Claude Code" },
]
keywords = ["graphviz", "dot", "viewer", "visualization", "gui", "diagram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PySide6>=6.7",
]

[project.urls]
Homepage = "https://github.com/ParkviewLab/pvl-dotview"
Source = "https://github.com/ParkviewLab/pvl-dotview"
Issues = "https://github.com/ParkviewLab/pvl-dotview/issues"

[project.scripts]
pvl-dotview = "pvl_dotview.__main__:main"

[dependency-groups]
dev = ["ruff", "ty", "pip-licenses"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvl_dotview"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
root = ["./src"]
